名前空間変更、ビルドが通るよう修正

--- a/src/apps/backend/src/ToDoApp.Presentation/ToDoApp.Presentation.csproj
+++ b/src/apps/backend/src/ToDoApp.Presentation/ToDoApp.Presentation.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <!-- プロジェクト間参照  -->
+  <ItemGroup>
+    <ProjectReference Include="..\TodoApp.Application\TodoApp.Application.csproj" />
+    <ProjectReference Include="..\TodoApp.Domain\TodoApp.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
