--- a/src/apps/backend/src/ToDoApp.Presentation/appsettings.json
+++ b/src/apps/backend/src/ToDoApp.Presentation/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db;Database=mydb;User=user;Password=password;"
+  }
 }
