--- a/src/apps/backend/src/TodoApp.Application/TodoApp.Application.csproj
+++ b/src/apps/backend/src/TodoApp.Application/TodoApp.Application.csproj
@@ -1,5 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <!-- プロジェクト間参照  -->
+  <ItemGroup>
+    <ProjectReference Include="..\TodoApp.Domain\TodoApp.Domain.csproj" />
+  </ItemGroup>
+  <!-- NuGet パッケージ参照 -->
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
