--- a/src/apps/backend/src/ToDoApp.Presentation/ToDoApp.Presentation.csproj
+++ b/src/apps/backend/src/ToDoApp.Presentation/ToDoApp.Presentation.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TodoApp.Application\TodoApp.Application.csproj" />
     <ProjectReference Include="..\TodoApp.Domain\TodoApp.Domain.csproj" />
+    <ProjectReference Include="..\TodoApp.Infrastructure/TodoApp.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
