--- a/src/apps/backend/src/ToDoApp.Presentation/appsettings.json
+++ b/src/apps/backend/src/ToDoApp.Presentation/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db;Database=mydb;User=user;Password=password;"
+    "DefaultConnection": "Server=db;Database=todo_db;User=user;Password=password;"
   }
 }
