--- a/src/apps/backend/src/ToDoApp.Infrastructure/ToDoApp.Infrastructure.csproj
+++ b/src/apps/backend/src/ToDoApp.Infrastructure/ToDoApp.Infrastructure.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.0" />
-    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.0" />
+    <!-- <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.0" /> -->
   </ItemGroup>
 
   <PropertyGroup>
