--- a/src/apps/frontend/package.json
+++ b/src/apps/frontend/package.json
@@ -9,6 +9,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "playwright:test": "playwright test",
+    "playwright:report": "playwright show-report",
     "biome:format": "biome format",
     "biome:lint": "biome lint"
   },
@@ -32,13 +34,16 @@
     "@angular/cli": "^18.0.3",
     "@angular/compiler-cli": "^18.0.0",
     "@biomejs/biome": "1.9.2",
+    "@playwright/test": "^1.47.2",
     "@testing-library/angular": "^17.3.1",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.13",
+    "@types/node": "^22.6.1",
     "biome": "^0.3.3",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.2.4",
+    "playwright": "^1.47.2",
     "typescript": "~5.4.2"
   },
   "volta": {
