--- a/src/apps/frontend/package.json
+++ b/src/apps/frontend/package.json
@@ -12,7 +12,10 @@
     "playwright:test": "playwright test",
     "playwright:report": "playwright show-report",
     "biome:format": "biome format",
-    "biome:lint": "biome lint"
+    "biome:lint": "biome lint",
+    "eslint": "ng lint",
+    "prettier": "prettier --write src",
+    "lint-fix": "eslint --cache --fix src/ && prettier --write src"
   },
   "private": true,
   "dependencies": {
@@ -40,11 +43,17 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.6.1",
+    "angular-eslint": "18.3.1",
     "biome": "^0.3.3",
+    "eslint": "^9.9.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.2.4",
     "playwright": "^1.47.2",
-    "typescript": "~5.4.2"
+    "prettier": "^3.3.3",
+    "typescript": "~5.4.2",
+    "typescript-eslint": "8.2.0"
   },
   "volta": {
     "node": "20.14.0"
